cdk.out/FlexischoolsStack.template.json
{
 "Resources": {
  "FlexischoolsVPC5D052703": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "FlexischoolsStack/FlexischoolsVPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsVPC/Resource"
   }
  },
  "FlexischoolsVPCPublicSubnet1Subnet0408C145": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-southeast-2a",
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "FlexischoolsStack/FlexischoolsVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "FlexischoolsVPC5D052703"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsVPC/PublicSubnet1/Subnet"
   }
  },
  "FlexischoolsVPCPublicSubnet1RouteTable9486FB68": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "FlexischoolsStack/FlexischoolsVPC/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "FlexischoolsVPC5D052703"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsVPC/PublicSubnet1/RouteTable"
   }
  },
  "FlexischoolsVPCPublicSubnet1RouteTableAssociation15FAC57E": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "FlexischoolsVPCPublicSubnet1RouteTable9486FB68"
    },
    "SubnetId": {
     "Ref": "FlexischoolsVPCPublicSubnet1Subnet0408C145"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsVPC/PublicSubnet1/RouteTableAssociation"
   }
  },
  "FlexischoolsVPCPublicSubnet1DefaultRouteE7F9B684": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "FlexischoolsVPCIGWFF3171F1"
    },
    "RouteTableId": {
     "Ref": "FlexischoolsVPCPublicSubnet1RouteTable9486FB68"
    }
   },
   "DependsOn": [
    "FlexischoolsVPCVPCGW87B416B4"
   ],
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsVPC/PublicSubnet1/DefaultRoute"
   }
  },
  "FlexischoolsVPCPublicSubnet1EIPDE110BB9": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "FlexischoolsStack/FlexischoolsVPC/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsVPC/PublicSubnet1/EIP"
   }
  },
  "FlexischoolsVPCPublicSubnet1NATGatewayED244CB7": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "FlexischoolsVPCPublicSubnet1EIPDE110BB9",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "FlexischoolsVPCPublicSubnet1Subnet0408C145"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "FlexischoolsStack/FlexischoolsVPC/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "FlexischoolsVPCPublicSubnet1DefaultRouteE7F9B684",
    "FlexischoolsVPCPublicSubnet1RouteTableAssociation15FAC57E"
   ],
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsVPC/PublicSubnet1/NATGateway"
   }
  },
  "FlexischoolsVPCPublicSubnet2Subnet00D633C0": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-southeast-2b",
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "FlexischoolsStack/FlexischoolsVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "FlexischoolsVPC5D052703"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsVPC/PublicSubnet2/Subnet"
   }
  },
  "FlexischoolsVPCPublicSubnet2RouteTable601DC5A8": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "FlexischoolsStack/FlexischoolsVPC/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "FlexischoolsVPC5D052703"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsVPC/PublicSubnet2/RouteTable"
   }
  },
  "FlexischoolsVPCPublicSubnet2RouteTableAssociation5EEA85DF": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "FlexischoolsVPCPublicSubnet2RouteTable601DC5A8"
    },
    "SubnetId": {
     "Ref": "FlexischoolsVPCPublicSubnet2Subnet00D633C0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsVPC/PublicSubnet2/RouteTableAssociation"
   }
  },
  "FlexischoolsVPCPublicSubnet2DefaultRoute222D9E5A": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "FlexischoolsVPCIGWFF3171F1"
    },
    "RouteTableId": {
     "Ref": "FlexischoolsVPCPublicSubnet2RouteTable601DC5A8"
    }
   },
   "DependsOn": [
    "FlexischoolsVPCVPCGW87B416B4"
   ],
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsVPC/PublicSubnet2/DefaultRoute"
   }
  },
  "FlexischoolsVPCPublicSubnet2EIP24D6534C": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "FlexischoolsStack/FlexischoolsVPC/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsVPC/PublicSubnet2/EIP"
   }
  },
  "FlexischoolsVPCPublicSubnet2NATGateway6D780AB5": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "FlexischoolsVPCPublicSubnet2EIP24D6534C",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "FlexischoolsVPCPublicSubnet2Subnet00D633C0"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "FlexischoolsStack/FlexischoolsVPC/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "FlexischoolsVPCPublicSubnet2DefaultRoute222D9E5A",
    "FlexischoolsVPCPublicSubnet2RouteTableAssociation5EEA85DF"
   ],
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsVPC/PublicSubnet2/NATGateway"
   }
  },
  "FlexischoolsVPCPrivateSubnet1Subnet50A5E582": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-southeast-2a",
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "FlexischoolsStack/FlexischoolsVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "FlexischoolsVPC5D052703"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsVPC/PrivateSubnet1/Subnet"
   }
  },
  "FlexischoolsVPCPrivateSubnet1RouteTableAC96380B": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "FlexischoolsStack/FlexischoolsVPC/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "FlexischoolsVPC5D052703"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsVPC/PrivateSubnet1/RouteTable"
   }
  },
  "FlexischoolsVPCPrivateSubnet1RouteTableAssociation082B8645": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "FlexischoolsVPCPrivateSubnet1RouteTableAC96380B"
    },
    "SubnetId": {
     "Ref": "FlexischoolsVPCPrivateSubnet1Subnet50A5E582"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsVPC/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "FlexischoolsVPCPrivateSubnet1DefaultRoute6A24AC81": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "FlexischoolsVPCPublicSubnet1NATGatewayED244CB7"
    },
    "RouteTableId": {
     "Ref": "FlexischoolsVPCPrivateSubnet1RouteTableAC96380B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsVPC/PrivateSubnet1/DefaultRoute"
   }
  },
  "FlexischoolsVPCPrivateSubnet2Subnet6E191004": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "ap-southeast-2b",
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "FlexischoolsStack/FlexischoolsVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "FlexischoolsVPC5D052703"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsVPC/PrivateSubnet2/Subnet"
   }
  },
  "FlexischoolsVPCPrivateSubnet2RouteTable565DEC1F": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "FlexischoolsStack/FlexischoolsVPC/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "FlexischoolsVPC5D052703"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsVPC/PrivateSubnet2/RouteTable"
   }
  },
  "FlexischoolsVPCPrivateSubnet2RouteTableAssociationD316A254": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "FlexischoolsVPCPrivateSubnet2RouteTable565DEC1F"
    },
    "SubnetId": {
     "Ref": "FlexischoolsVPCPrivateSubnet2Subnet6E191004"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsVPC/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "FlexischoolsVPCPrivateSubnet2DefaultRoute329D3EC5": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "FlexischoolsVPCPublicSubnet2NATGateway6D780AB5"
    },
    "RouteTableId": {
     "Ref": "FlexischoolsVPCPrivateSubnet2RouteTable565DEC1F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsVPC/PrivateSubnet2/DefaultRoute"
   }
  },
  "FlexischoolsVPCIGWFF3171F1": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "FlexischoolsStack/FlexischoolsVPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsVPC/IGW"
   }
  },
  "FlexischoolsVPCVPCGW87B416B4": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "FlexischoolsVPCIGWFF3171F1"
    },
    "VpcId": {
     "Ref": "FlexischoolsVPC5D052703"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsVPC/VPCGW"
   }
  },
  "FlexischoolsVPCRestrictDefaultSecurityGroupCustomResourceBF1D4D25": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "FlexischoolsVPC5D052703",
      "DefaultSecurityGroup"
     ]
    },
    "Account": "761018873360"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsVPC/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:ap-southeast-2:761018873360:security-group/",
             {
              "Fn::GetAtt": [
               "FlexischoolsVPC5D052703",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-761018873360-ap-southeast-2",
     "S3Key": "7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs20.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200",
    "aws:asset:property": "Code"
   }
  },
  "RdsSecurityGroup632A77E4": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Allow PostgreSQL access",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "FlexischoolsVPC5D052703"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/RdsSecurityGroup/Resource"
   }
  },
  "RdsSecurityGroupfromFlexischoolsStackFargateSecurityGroupF728A7C5543292E05425": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Allow Fargate to connect to RDS",
    "FromPort": 5432,
    "GroupId": {
     "Fn::GetAtt": [
      "RdsSecurityGroup632A77E4",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "FargateSecurityGroup4A64555C",
      "GroupId"
     ]
    },
    "ToPort": 5432
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/RdsSecurityGroup/from FlexischoolsStackFargateSecurityGroupF728A7C5:5432"
   }
  },
  "FargateSecurityGroup4A64555C": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "FlexischoolsStack/FargateSecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "FlexischoolsVPC5D052703"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FargateSecurityGroup/Resource"
   }
  },
  "FargateSecurityGroupfromFlexischoolsStackFlexischoolsFargateServiceLBSecurityGroupF43E87348062AFBB8C": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Load balancer to target",
    "FromPort": 80,
    "GroupId": {
     "Fn::GetAtt": [
      "FargateSecurityGroup4A64555C",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "FlexischoolsFargateServiceLBSecurityGroupA920C9EC",
      "GroupId"
     ]
    },
    "ToPort": 80
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FargateSecurityGroup/from FlexischoolsStackFlexischoolsFargateServiceLBSecurityGroupF43E8734:80"
   }
  },
  "FlexischoolsRdsInstanceSubnetGroupBDA8EFBC": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for FlexischoolsRdsInstance database",
    "SubnetIds": [
     {
      "Ref": "FlexischoolsVPCPrivateSubnet1Subnet50A5E582"
     },
     {
      "Ref": "FlexischoolsVPCPrivateSubnet2Subnet6E191004"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsRdsInstance/SubnetGroup/Default"
   }
  },
  "FlexischoolsStackFlexischoolsRdsInstanceSecret9719EA4F3fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"flexischoolsuser\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsRdsInstance/Secret/Resource"
   }
  },
  "FlexischoolsRdsInstanceSecretAttachment737A96DB": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "FlexischoolsStackFlexischoolsRdsInstanceSecret9719EA4F3fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "FlexischoolsRdsInstance224DCFEB"
    },
    "TargetType": "AWS::RDS::DBInstance"
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsRdsInstance/Secret/Attachment/Resource"
   }
  },
  "FlexischoolsRdsInstance224DCFEB": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t3.micro",
    "DBInstanceIdentifier": "flexischools-db",
    "DBName": "FlexischoolsDB",
    "DBSubnetGroupName": {
     "Ref": "FlexischoolsRdsInstanceSubnetGroupBDA8EFBC"
    },
    "Engine": "postgres",
    "EngineVersion": "17.2",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "FlexischoolsStackFlexischoolsRdsInstanceSecret9719EA4F3fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "flexischoolsuser",
    "MultiAZ": true,
    "PubliclyAccessible": false,
    "StorageEncrypted": true,
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "RdsSecurityGroup632A77E4",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Snapshot",
   "DeletionPolicy": "Snapshot",
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsRdsInstance/Resource"
   }
  },
  "FlexischoolsDeadLetterQueueA30B8EE8": {
   "Type": "AWS::SQS::Queue",
   "Properties": {
    "MessageRetentionPeriod": 1209600,
    "QueueName": "Flexischools-DLQ"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsDeadLetterQueue/Resource"
   }
  },
  "FlexischoolsQueue8C143CBE": {
   "Type": "AWS::SQS::Queue",
   "Properties": {
    "QueueName": "Flexischools-orders-queue",
    "RedrivePolicy": {
     "deadLetterTargetArn": {
      "Fn::GetAtt": [
       "FlexischoolsDeadLetterQueueA30B8EE8",
       "Arn"
      ]
     },
     "maxReceiveCount": 5
    },
    "VisibilityTimeout": 300
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsQueue/Resource"
   }
  },
  "FlexischoolsCluster4C8E8572": {
   "Type": "AWS::ECS::Cluster",
   "Properties": {
    "ClusterName": "Flexischools-cluster"
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsCluster/Resource"
   }
  },
  "FlexischoolsFargateServiceLB2522B7F9": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Name": "Flexschools-LoadBalancer",
    "Scheme": "internal",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "FlexischoolsFargateServiceLBSecurityGroupA920C9EC",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "FlexischoolsVPCPrivateSubnet1Subnet50A5E582"
     },
     {
      "Ref": "FlexischoolsVPCPrivateSubnet2Subnet6E191004"
     }
    ],
    "Type": "application"
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsFargateService/LB/Resource"
   }
  },
  "FlexischoolsFargateServiceLBSecurityGroupA920C9EC": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB FlexischoolsStackFlexischoolsFargateServiceLBD53A6E1C",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "FlexischoolsVPC5D052703"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsFargateService/LB/SecurityGroup/Resource"
   }
  },
  "FlexischoolsFargateServiceLBSecurityGrouptoFlexischoolsStackFargateSecurityGroupF728A7C580AB760CF1": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "FargateSecurityGroup4A64555C",
      "GroupId"
     ]
    },
    "FromPort": 80,
    "GroupId": {
     "Fn::GetAtt": [
      "FlexischoolsFargateServiceLBSecurityGroupA920C9EC",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "ToPort": 80
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsFargateService/LB/SecurityGroup/to FlexischoolsStackFargateSecurityGroupF728A7C5:80"
   }
  },
  "FlexischoolsFargateServiceLBPublicListener5132B796": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "FlexischoolsFargateServiceLBPublicListenerECSGroup504CB3C4"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "FlexischoolsFargateServiceLB2522B7F9"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsFargateService/LB/PublicListener/Resource"
   }
  },
  "FlexischoolsFargateServiceLBPublicListenerECSGroup504CB3C4": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "HealthCheckPath": "/health",
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": {
     "Ref": "FlexischoolsVPC5D052703"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsFargateService/LB/PublicListener/ECSGroup/Resource"
   }
  },
  "FlexischoolsFargateServiceTaskDefTaskRoleA35408D5": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsFargateService/TaskDef/TaskRole/Resource"
   }
  },
  "FlexischoolsFargateServiceTaskDefTaskRoleDefaultPolicyE73EFB41": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "sqs:ChangeMessageVisibility",
        "sqs:DeleteMessage",
        "sqs:GetQueueAttributes",
        "sqs:GetQueueUrl",
        "sqs:ReceiveMessage"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "FlexischoolsQueue8C143CBE",
         "Arn"
        ]
       }
      },
      {
       "Action": "rds-db:connect",
       "Effect": "Allow",
       "Resource": {
        "Fn::Join": [
         "",
         [
          "arn:aws:rds-db:ap-southeast-2:761018873360:dbuser:",
          {
           "Ref": "FlexischoolsRdsInstance224DCFEB"
          },
          "/flexischoolsuser"
         ]
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "FlexischoolsFargateServiceTaskDefTaskRoleDefaultPolicyE73EFB41",
    "Roles": [
     {
      "Ref": "FlexischoolsFargateServiceTaskDefTaskRoleA35408D5"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsFargateService/TaskDef/TaskRole/DefaultPolicy/Resource"
   }
  },
  "FlexischoolsFargateServiceTaskDef4CCD616E": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "DB_HOST",
        "Value": {
         "Fn::GetAtt": [
          "FlexischoolsRdsInstance224DCFEB",
          "Endpoint.Address"
         ]
        }
       },
       {
        "Name": "DB_NAME",
        "Value": "FlexischoolsDB"
       },
       {
        "Name": "DB_USER",
        "Value": "flexischoolsuser"
       },
       {
        "Name": "QUEUE_URL",
        "Value": {
         "Ref": "FlexischoolsQueue8C143CBE"
        }
       }
      ],
      "Essential": true,
      "Image": {
       "Fn::Sub": "761018873360.dkr.ecr.ap-southeast-2.${AWS::URLSuffix}/cdk-hnb659fds-container-assets-761018873360-ap-southeast-2:66ba674704424935edbacfd55dd1d6c1ad94eb2e4eaa230f16a7fd53d419b688"
      },
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "FlexischoolsFargateServiceTaskDefFlexschoolscontainerLogGroupCF1BB1F5"
        },
        "awslogs-stream-prefix": "OrderProcessing",
        "awslogs-region": "ap-southeast-2",
        "mode": "non-blocking"
       }
      },
      "Name": "Flexschools-container",
      "PortMappings": [
       {
        "ContainerPort": 80,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "512",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "FlexischoolsFargateServiceTaskDefExecutionRole3A35D244",
      "Arn"
     ]
    },
    "Family": "FlexischoolsStackFlexischoolsFargateServiceTaskDef5B146BE6",
    "Memory": "1024",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "FlexischoolsFargateServiceTaskDefTaskRoleA35408D5",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsFargateService/TaskDef/Resource"
   }
  },
  "FlexischoolsFargateServiceTaskDefFlexschoolscontainerLogGroupCF1BB1F5": {
   "Type": "AWS::Logs::LogGroup",
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsFargateService/TaskDef/Flexschools-container/LogGroup/Resource"
   }
  },
  "FlexischoolsFargateServiceTaskDefExecutionRole3A35D244": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsFargateService/TaskDef/ExecutionRole/Resource"
   }
  },
  "FlexischoolsFargateServiceTaskDefExecutionRoleDefaultPolicy11FDD0D1": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "ecr:BatchCheckLayerAvailability",
        "ecr:BatchGetImage",
        "ecr:GetDownloadUrlForLayer"
       ],
       "Effect": "Allow",
       "Resource": "arn:aws:ecr:ap-southeast-2:761018873360:repository/cdk-hnb659fds-container-assets-761018873360-ap-southeast-2"
      },
      {
       "Action": "ecr:GetAuthorizationToken",
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "FlexischoolsFargateServiceTaskDefFlexschoolscontainerLogGroupCF1BB1F5",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "FlexischoolsFargateServiceTaskDefExecutionRoleDefaultPolicy11FDD0D1",
    "Roles": [
     {
      "Ref": "FlexischoolsFargateServiceTaskDefExecutionRole3A35D244"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsFargateService/TaskDef/ExecutionRole/DefaultPolicy/Resource"
   }
  },
  "FlexischoolsFargateServiceD02F46AD": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "FlexischoolsCluster4C8E8572"
    },
    "DeploymentConfiguration": {
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 100
    },
    "DesiredCount": 1,
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "Flexschools-container",
      "ContainerPort": 80,
      "TargetGroupArn": {
       "Ref": "FlexischoolsFargateServiceLBPublicListenerECSGroup504CB3C4"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "FargateSecurityGroup4A64555C",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "FlexischoolsVPCPrivateSubnet1Subnet50A5E582"
       },
       {
        "Ref": "FlexischoolsVPCPrivateSubnet2Subnet6E191004"
       }
      ]
     }
    },
    "ServiceName": "Flexischools-service",
    "TaskDefinition": {
     "Ref": "FlexischoolsFargateServiceTaskDef4CCD616E"
    }
   },
   "DependsOn": [
    "FlexischoolsFargateServiceLBPublicListenerECSGroup504CB3C4",
    "FlexischoolsFargateServiceLBPublicListener5132B796",
    "FlexischoolsFargateServiceTaskDefTaskRoleDefaultPolicyE73EFB41",
    "FlexischoolsFargateServiceTaskDefTaskRoleA35408D5"
   ],
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsFargateService/Service/Service"
   }
  },
  "FlexischoolsFargateServiceTaskCountTargetDFE84C80": {
   "Type": "AWS::ApplicationAutoScaling::ScalableTarget",
   "Properties": {
    "MaxCapacity": 20,
    "MinCapacity": 1,
    "ResourceId": {
     "Fn::Join": [
      "",
      [
       "service/",
       {
        "Ref": "FlexischoolsCluster4C8E8572"
       },
       "/",
       {
        "Fn::GetAtt": [
         "FlexischoolsFargateServiceD02F46AD",
         "Name"
        ]
       }
      ]
     ]
    },
    "RoleARN": "arn:aws:iam::761018873360:role/aws-service-role/ecs.application-autoscaling.amazonaws.com/AWSServiceRoleForApplicationAutoScaling_ECSService",
    "ScalableDimension": "ecs:service:DesiredCount",
    "ServiceNamespace": "ecs"
   },
   "DependsOn": [
    "FlexischoolsFargateServiceTaskDefTaskRoleDefaultPolicyE73EFB41",
    "FlexischoolsFargateServiceTaskDefTaskRoleA35408D5"
   ],
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsFargateService/Service/TaskCount/Target/Resource"
   }
  },
  "FlexischoolsFargateServiceTaskCountTargetCpuScaling69548989": {
   "Type": "AWS::ApplicationAutoScaling::ScalingPolicy",
   "Properties": {
    "PolicyName": "FlexischoolsStackFlexischoolsFargateServiceTaskCountTargetCpuScalingD04B5D95",
    "PolicyType": "TargetTrackingScaling",
    "ScalingTargetId": {
     "Ref": "FlexischoolsFargateServiceTaskCountTargetDFE84C80"
    },
    "TargetTrackingScalingPolicyConfiguration": {
     "PredefinedMetricSpecification": {
      "PredefinedMetricType": "ECSServiceAverageCPUUtilization"
     },
     "TargetValue": 50
    }
   },
   "DependsOn": [
    "FlexischoolsFargateServiceTaskDefTaskRoleDefaultPolicyE73EFB41",
    "FlexischoolsFargateServiceTaskDefTaskRoleA35408D5"
   ],
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsFargateService/Service/TaskCount/Target/CpuScaling/Resource"
   }
  },
  "FlexischoolsFargateServiceTaskCountTargetMemoryScalingC4707CEB": {
   "Type": "AWS::ApplicationAutoScaling::ScalingPolicy",
   "Properties": {
    "PolicyName": "FlexischoolsStackFlexischoolsFargateServiceTaskCountTargetMemoryScalingAFF2AEC1",
    "PolicyType": "TargetTrackingScaling",
    "ScalingTargetId": {
     "Ref": "FlexischoolsFargateServiceTaskCountTargetDFE84C80"
    },
    "TargetTrackingScalingPolicyConfiguration": {
     "PredefinedMetricSpecification": {
      "PredefinedMetricType": "ECSServiceAverageMemoryUtilization"
     },
     "TargetValue": 50
    }
   },
   "DependsOn": [
    "FlexischoolsFargateServiceTaskDefTaskRoleDefaultPolicyE73EFB41",
    "FlexischoolsFargateServiceTaskDefTaskRoleA35408D5"
   ],
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/FlexischoolsFargateService/Service/TaskCount/Target/MemoryScaling/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/81X32/bNhD+W6rHgtXQFOiGvjlOWxjLGs/28jAjKM7kRbmGIhX+cOIK+t8LkqItx043dCuQB0PSHe/jd8ePR/qkfP3rb+XJC7i3r7i4fSVpVbZzB/yWwb393CI/KdvLhi/booaH0VdbvCteFt0VG1+ry+mYTf1KEp/7lUK3bAtYA0lYkSS3+VsrjKNZsW74RPTvnIQ5lZrf9t81NAlk0lyoc/CK3xTvnPHICmrWb8ePhoO1VKlJs347EsKgtRdqbBAcaZWosWfCIhIR4hO4j+DwHjbFu2Xxsrh6NgSfB4snyxQlloQV3mbaO1zASuLOvrONrNWcIvB2cHh5P5mGxw6dTQ2tweH/rthrkPYZrMV/o/F8mDwTGkmFE+XQKNxqKPW+/mvkHPCbGpVjc+TekNt8NNo3yzaQzVNJqe9HUl54t9JeibxpBFpuqNnPXIiJqgKfmZeYt [...]
   },
   "Metadata": {
    "aws:cdk:path": "FlexischoolsStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "FlexischoolsFargateServiceLoadBalancerDNS51E0A692": {
   "Value": {
    "Fn::GetAtt": [
     "FlexischoolsFargateServiceLB2522B7F9",
     "DNSName"
    ]
   }
  },
  "FlexischoolsFargateServiceServiceURL44AAD0F8": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "http://",
      {
       "Fn::GetAtt": [
        "FlexischoolsFargateServiceLB2522B7F9",
        "DNSName"
       ]
      }
     ]
    ]
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
